# mkdocs-practice

./: 404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: first.md  index.md
first/: index.html
