[tool.poetry]
name = "mkdocs-practice"
version = "0.1.0"
description = ""
authors = ["cndoit18 <cndoit18@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
